--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # basic options
-title: EEG/MEG Modeling Toolkit v1.0-Prelim.
+title: TES Modeling Toolkit v1.0-Prelim.
 #author: xyz
-email: smakarov@mgh.harvard.edu msh@nmr.mgh.harvard.edu Yoshio.Okada@childrens.harvard.edu gregn@wpi.edu jyrki@nmr.mgh.harvard.edu nummenma@nmr.mgh.harvard.edu
+email: smakarov@mgh.harvard.edu nummenma@nmr.mgh.harvard.edu wawartman@wpi.edu
 description: Please direct support requests to Will Wartman at wawartman@wpi.edu
 #twitter_username: __
 #github_username:  __
